# evelien-vb.github.io

./: .pre-commit-config.yaml  README.md  index.html  pyproject.toml
css/: styles.css
flask_app/: autocomplete.js  dict_for_flask_app.pkl  flask_app.py  freeze.py  plot_results.py  requirements.txt  wiki_scrape.py
flask_app/templates/: index.html  test.html  test_plot.html
html/: newspaper_proj.html
