[tool.poetry]
name = "evelien-vb-flask-app"
version = "0.1.0"
description = ""
authors = ["Evelien van Bokhorst <evelienvanbokhorst@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_app"}]

[tool.poetry.dependencies]
python = "^3.10.0"
loguru = "^0.6.0"
numpy = "^1.25.0"
flask = "3.0.3"
pandas = "<2.0.0"
plotly = "5.24.1"
beautifulsoup4 = "4.12.3"
regex = "2024.9.11"
Frozen-Flask = "1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"